--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/vercel": "^8.1.3",
     "@tailwindcss/vite": "^4.1.0",
-    "astro": "^5.5.6",
+    "astro": "^5.6.1",
     "tailwindcss": "^4.1.0"
   },
   "devDependencies": {
